--- a/css/workDetail.css
+++ b/css/workDetail.css
@@ -36,12 +36,12 @@
   width: 100%;
   height: 500px;
   /* background-color: teal; */
-  /* background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ajCNe7y.qtDOZM3AQNz49oS*lXvBM1Zw5.3rywafDx3ZE0MDVBF3sNsv*v0vaTv0bGZDZIZb3VQ321ZdGfqscQ!/r"); */
+  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1YkBH4Tta1fGwBZwdOCP5gigI3.cibYjjrWumQu0wg1aI8EjKi5g4mGoWtR9F7hOHAjKKqqT5oF9Q6p*icDDcjg!/r");
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-position-y: -280px;
+  background-position-y: 0;
   background-position-x: center;
-  background-size: cover;
+  background-size: 100%;
   position: absolute;
   top: 0;
   left: 0;
