--- a/css/workDetail.css
+++ b/css/workDetail.css
@@ -63,6 +63,22 @@
   left: 0;
 }
 
+.bbg5 {
+  width: 100%;
+  height: 500px;
+  /* background-color: teal; */
+  background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1UVATWV5G.8EYzzQYhvjlPjBhXbMDtQCbFEntn35cPNKscEuax6RbGP3fVF1FS5MmD1ZY0g7Y3a9AJ1FMrEKgSI!/r");
+  /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position-y: -20px;
+  background-position-x: center;
+  background-size: 110%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .content .title {
   color: white;
   width: 100%;
