--- a/css/workDetail.css
+++ b/css/workDetail.css
@@ -79,6 +79,22 @@
   left: 0;
 }
 
+.bbg6 {
+  width: 100%;
+  height: 500px;
+  /* background-color: teal; */
+  background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1X.9lWJFcVbcomBVSNQP*6C11J5SEyxx3VWBA6gOL5sw9xt4If9U99cTQ6OZn3Fw8w61haIDZTjhnkt*.rGjSto!/r");
+  /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position-y: -20px;
+  background-position-x: center;
+  background-size: 110%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .content .title {
   color: white;
   width: 100%;
