--- a/css/common.css
+++ b/css/common.css
@@ -4,132 +4,279 @@
   clear: both;
 }
 
-body {
-  background-color: #111;
-  padding: 30px 0;
-  min-width: 1400px;
-  font-family: "IBM Plex Sans", sans-serif;
+@media only screen and (min-width: 520px) {
+  body {
+    background-color: #111;
+    padding: 30px 0;
+    /* min-width: 1400px; */
+    font-family: "IBM Plex Sans", sans-serif;
+  }
+
+  .container {
+    margin-top: 20px;
+    width: 1152px;
+    margin: 0 auto;
+    /* background-color: rgba(255, 255, 255, .3); */
+    /* height: 750px; */
+  }
+
+  .container .nav {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    /* background-color:rgba(0, 0, 0, .7); */
+    /* border-bottom: 1px solid rgb(164, 164, 164); */
+  }
+
+  label,
+  nav input {
+    display: none;
+  }
+
+  .container .nav .logo {
+    position: absolute;
+    left: -34px;
+    right: 0;
+    margin: 15px 35px;
+    width: 100px;
+    height: 100px;
+    opacity: 70%;
+    transition: ease-in-out 0.2s;
+  }
+
+  .container .nav .logo:hover {
+    opacity: 100%;
+    transition: ease-in-out 0.2s;
+  }
+
+  .container .nav .logo h1 {
+    display: none;
+  }
+
+  .container .nav .logo img {
+    height: 70px;
+    margin: 15px 25px;
+  }
+
+  .container .nav .navitem {
+    float: right;
+
+    /* transition: ease-in-out .2s; */
+  }
+
+  .container .nav .navitem a {
+    line-height: 100px;
+    margin: 0 25px;
+    padding: 15px 0;
+    color: rgba(255, 255, 255, 0.746);
+    box-sizing: border-box;
+    font-size: 20px;
+    font-weight: 500;
+    transition: ease-in-out 0.2s;
+  }
+
+  .container .nav .navitem :last-child {
+    padding-right: 0;
+  }
+
+  .container .nav .navitem a:hover {
+    color: white;
+    text-shadow: 2px 2px 0px #db296d;
+    transition: ease-in-out 0.2s;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+  }
+
+  .contact {
+    margin: 50px auto;
+    width: 65%;
+    height: 200px;
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  #logo {
+    grid-area: 1 / 1 / span 2 / span 1;
+    padding: 16px 55px;
+  }
+
+  #logo img {
+    height: 150px;
+  }
+
+  #phone {
+    grid-area: 1 / 2 / span 1 / span 1;
+    transition: ease-in-out 0.2s;
+  }
+
+  #phone:hover {
+    /* background-color: rgb(22, 167, 142); */
+    text-shadow: 3px 3px 0 #db296d;
+    transition: 0.2s ease-in-out;
+  }
+
+  #mail {
+    grid-area: 2 / 2 / span 1 / span 1;
+    transition: ease-in-out 0.2s;
+  }
+
+  #mail:hover {
+    /* background-color: rgb(22, 162, 167); */
+    text-shadow: 3px 3px 0 #db296d;
+    transition: 0.2s ease-in-out;
+  }
+
+  .contact div {
+    /* padding: 39px; */
+    line-height: 1.3;
+    font-size: 35px;
+    font-weight: 700;
+    color: white;
+  }
+
+  .contact div span {
+    display: block;
+    font-size: 20px;
+    font-weight: 300;
+  }
 }
 
-.container {
-  margin-top: 20px;
-  width: 1152px;
-  margin: 0 auto;
-  /* background-color: rgba(255, 255, 255, .3); */
-  /* height: 750px; */
-}
+@media only screen and (max-width: 520px) {
+  body {
+    background-color: #111;
+    padding: 30px 0;
+    /* min-width: 1400px; */
+    font-family: "IBM Plex Sans", sans-serif;
+  }
 
-.container .nav {
-  position: relative;
-  width: 100%;
-  height: 100px;
-  /* background-color:rgba(0, 0, 0, .7); */
-  /* border-bottom: 1px solid rgb(164, 164, 164); */
-}
+  .container {
+    margin-top: 20px;
+    width: 100%;
+    margin: 0 auto;
+    /* background-color: rgba(255, 255, 255, .3); */
+    /* height: 750px; */
+  }
 
-.container .nav .logo {
-  position: absolute;
-  left: -34px;
-  right: 0;
-  margin: 15px 35px;
-  width: 100px;
-  height: 100px;
-  opacity: 70%;
-  transition: ease-in-out 0.2s;
-}
+  .container .nav {
+    position: relative;
+    width: 100%;
+    height: 100px;
+  }
 
-.container .nav .logo:hover {
-  opacity: 100%;
-  transition: ease-in-out 0.2s;
-}
+  nav label .iconfont {
+    display: block;
+    text-align: right;
+    margin: 0 25px;
+    font-size: 32px;
+    color: white;
+  }
 
-.container .nav .logo h1 {
-  display: none;
-}
+  nav input {
+    display: none;
+  }
 
-.container .nav .logo img {
-  height: 70px;
-  margin: 15px 25px;
-}
+  nav input:checked ~ .navitem {
+    display: block;
+  }
 
-.container .nav .navitem {
-  float: right;
+  .navitem {
+    display: none;
+  }
 
-  /* transition: ease-in-out .2s; */
-}
+  .container .nav .logo {
+    position: absolute;
+    left: -34px;
+    right: 0;
+    margin: 0 35px;
+    width: 100px;
+    height: 100px;
+    opacity: 70%;
+    transition: ease-in-out 0.2s;
+  }
 
-.container .nav .navitem a {
-  line-height: 100px;
-  margin: 0 25px;
-  padding: 15px 0;
-  color: rgba(255, 255, 255, 0.746);
-  box-sizing: border-box;
-  font-size: 20px;
-  font-weight: 500;
-  transition: ease-in-out 0.2s;
-}
+  .container .nav .logo h1 {
+    display: none;
+  }
 
-.container .nav .navitem :last-child {
-  padding-right: 0;
-}
+  .container .nav .logo img {
+    height: 70px;
+    margin: 0 25px;
+  }
 
-.container .nav .navitem a:hover {
-  color: white;
-  text-shadow: 2px 2px 0px #db296d;
-  transition: ease-in-out 0.2s;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.459);
-}
+  .container .nav .navitem a {
+    display: block;
+    line-height: 20px;
+    margin: 0 25px;
+    padding: 15px 0;
+    color: rgba(255, 255, 255, 0.746);
+    box-sizing: border-box;
+    font-size: 20px;
+    font-weight: 500;
+    transition: ease-in-out 0.2s;
+    text-align: right;
+  }
 
-.contact {
-  margin: 50px auto;
-  width: 65%;
-  height: 200px;
-  display: grid;
-  grid-template-columns: 1fr 2.5fr;
-  grid-template-rows: 1fr 1fr;
-}
+  .container .nav .navitem :last-child {
+    padding-right: 0;
+  }
 
-#logo {
-  grid-area: 1 / 1 / span 2 / span 1;
-  padding: 16px 55px;
-}
+  .container .nav .navitem a:hover {
+    color: white;
+    text-shadow: 2px 2px 0px #db296d;
+    transition: ease-in-out 0.2s;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+  }
 
-#logo img {
-  height: 150px;
-}
+  .contact {
+    margin: 50px auto;
+    width: 65%;
+    height: 200px;
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+    grid-template-rows: 1fr 1fr;
+  }
 
-#phone {
-  grid-area: 1 / 2 / span 1 / span 1;
-  transition: ease-in-out 0.2s;
-}
+  #logo {
+    grid-area: 1 / 1 / span 2 / span 1;
+  }
 
-#phone:hover {
-  /* background-color: rgb(22, 167, 142); */
-  text-shadow: 3px 3px 0 #db296d;
-  transition: 0.2s ease-in-out;
-}
+  #logo img {
+    height: 50px;
+  }
 
-#mail {
-  grid-area: 2 / 2 / span 1 / span 1;
-  transition: ease-in-out 0.2s;
-}
+  #phone {
+    grid-area: 1 / 2 / span 1 / span 1;
+    transition: ease-in-out 0.2s;
+  }
 
-#mail:hover {
-  /* background-color: rgb(22, 162, 167); */
-  text-shadow: 3px 3px 0 #db296d;
-  transition: 0.2s ease-in-out;
-}
+  #phone:hover {
+    /* background-color: rgb(22, 167, 142); */
+    text-shadow: 3px 3px 0 #db296d;
+    transition: 0.2s ease-in-out;
+  }
 
-.contact div {
-  /* padding: 39px; */
-  line-height: 1.3;
-  font-size: 35px;
-  font-weight: 700;
-  color: white;
-}
+  #mail {
+    grid-area: 2 / 2 / span 1 / span 1;
+    transition: ease-in-out 0.2s;
+  }
 
-.contact div span {
-  display: block;
-  font-size: 20px;
-  font-weight: 300;
+  #mail:hover {
+    /* background-color: rgb(22, 162, 167); */
+    text-shadow: 3px 3px 0 #db296d;
+    transition: 0.2s ease-in-out;
+  }
+
+  .contact div {
+    /* padding: 39px; */
+    line-height: 1.3;
+    font-size: 25px;
+    font-weight: 700;
+    color: white;
+  }
+
+  .contact div span {
+    display: block;
+    font-size: 15px;
+    font-weight: 300;
+  }
 }
