--- a/css/workDetail.css
+++ b/css/workDetail.css
@@ -2,200 +2,403 @@
   position: relative;
 }
 
-.bbg {
-  width: 100%;
-  height: 500px;
-  /* background-color: teal; */
-  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3l9oZB/jASqEt644m*KNERKGtvN1auyrsMuS63lAOjMrSEHlBq4X0L5Pxuk5XEoijxDffbO9N46C1SPxnqiVmVPZph.7gnQVT4jALCBYWTQHGB10PE!/r");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position-y: -20px;
-  background-position-x: center;
-  background-size: 110%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+@media only screen and (min-width: 520px) {
+  .bbg {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3l9oZB/jASqEt644m*KNERKGtvN1auyrsMuS63lAOjMrSEHlBq4X0L5Pxuk5XEoijxDffbO9N46C1SPxnqiVmVPZph.7gnQVT4jALCBYWTQHGB10PE!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -20px;
+    background-position-x: center;
+    background-size: 110%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.bbg2 {
-  width: 100%;
-  height: 500px;
-  /* background-color: teal; */
-  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2sSSoy/jASqEt644m*KNERKGtvN1TyYp4nih0izSPa4Er1eZF3cQSi0gE0HI9DJMoRdVOVl2IO.tbQY6wOKoo2s.1ANVleseu3tuJu7rfuv*MY9FqM!/r");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position-y: 0px;
-  background-position-x: center;
-  background-size: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  .bbg2 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2sSSoy/jASqEt644m*KNERKGtvN1TyYp4nih0izSPa4Er1eZF3cQSi0gE0HI9DJMoRdVOVl2IO.tbQY6wOKoo2s.1ANVleseu3tuJu7rfuv*MY9FqM!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: 0px;
+    background-position-x: center;
+    background-size: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.bbg3 {
-  width: 100%;
-  height: 500px;
-  /* background-color: teal; */
-  background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1YkBH4Tta1fGwBZwdOCP5gigI3.cibYjjrWumQu0wg1aI8EjKi5g4mGoWtR9F7hOHAjKKqqT5oF9Q6p*icDDcjg!/r");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position-y: 0;
-  background-position-x: center;
-  background-size: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  .bbg3 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1YkBH4Tta1fGwBZwdOCP5gigI3.cibYjjrWumQu0wg1aI8EjKi5g4mGoWtR9F7hOHAjKKqqT5oF9Q6p*icDDcjg!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: 0;
+    background-position-x: center;
+    background-size: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.bbg4 {
-  width: 100%;
-  height: 500px;
-  /* background-color: teal; */
-  /* background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1bxGmlRDxCg7uJn8CqxiiefNFANJADPvm4cBalldC*52rh6a1sspgDkEaX9rku4kcv072*m7avMdxFUTLEEHw9k!/r"); */
-  background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1YjLHbuE*UtOxvbfzQ6ngo7uFcfpdfawpSZ1azgKTw.XGVrUT5TX.kj0qUJDBxxdjtfyr3rHoaUrZStYlxkIOtU!/r");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position-y: -40px;
-  background-position-x: center;
-  background-size: 120%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  .bbg4 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    /* background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1bxGmlRDxCg7uJn8CqxiiefNFANJADPvm4cBalldC*52rh6a1sspgDkEaX9rku4kcv072*m7avMdxFUTLEEHw9k!/r"); */
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1YjLHbuE*UtOxvbfzQ6ngo7uFcfpdfawpSZ1azgKTw.XGVrUT5TX.kj0qUJDBxxdjtfyr3rHoaUrZStYlxkIOtU!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -40px;
+    background-position-x: center;
+    background-size: 120%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.bbg5 {
-  width: 100%;
-  height: 500px;
-  /* background-color: teal; */
-  background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1UVATWV5G.8EYzzQYhvjlPjBhXbMDtQCbFEntn35cPNKscEuax6RbGP3fVF1FS5MmD1ZY0g7Y3a9AJ1FMrEKgSI!/r");
-  /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position-y: -20px;
-  background-position-x: center;
-  background-size: 110%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  .bbg5 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1UVATWV5G.8EYzzQYhvjlPjBhXbMDtQCbFEntn35cPNKscEuax6RbGP3fVF1FS5MmD1ZY0g7Y3a9AJ1FMrEKgSI!/r");
+    /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -20px;
+    background-position-x: center;
+    background-size: 110%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.bbg6 {
-  width: 100%;
-  height: 500px;
-  /* background-color: teal; */
-  background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1X.9lWJFcVbcomBVSNQP*6C11J5SEyxx3VWBA6gOL5sw9xt4If9U99cTQ6OZn3Fw8w61haIDZTjhnkt*.rGjSto!/r");
-  /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position-y: -20px;
-  background-position-x: center;
-  background-size: 110%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  .bbg6 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1X.9lWJFcVbcomBVSNQP*6C11J5SEyxx3VWBA6gOL5sw9xt4If9U99cTQ6OZn3Fw8w61haIDZTjhnkt*.rGjSto!/r");
+    /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -20px;
+    background-position-x: center;
+    background-size: 110%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.content .title {
-  color: white;
-  width: 100%;
-  height: 150px;
-  line-height: 1.2;
-  font-size: 60px;
-  font-weight: 700;
-  margin: 12px auto;
-  margin-bottom: 25px;
-}
+  .content .title {
+    color: white;
+    width: 100%;
+    height: 150px;
+    line-height: 1.2;
+    font-size: 60px;
+    font-weight: 700;
+    margin: 12px auto;
+    margin-bottom: 25px;
+  }
 
-.title span {
-  margin: 20px 0;
-  display: block;
-  font-size: 20px;
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.753);
-}
+  .title span {
+    margin: 20px 0;
+    display: block;
+    font-size: 20px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.753);
+  }
 
-.content {
-  width: 100%;
+  .content {
+    width: 100%;
 
-  line-height: 1.7;
-  font-size: 24px;
-  font-weight: 500;
-  color: rgb(221, 221, 221);
-  margin: 420px auto;
-  margin-bottom: 150px;
-  /* background-color: rgba(50, 50, 50, 0.658); */
-}
+    line-height: 1.7;
+    font-size: 24px;
+    font-weight: 500;
+    color: rgb(221, 221, 221);
+    margin: 420px auto;
+    margin-bottom: 150px;
+    /* background-color: rgba(50, 50, 50, 0.658); */
+  }
 
-.content #img1 {
-  width: 100%;
-  height: 700px;
-  background: url("../images/blog/choice/shop0.jpg") no-repeat;
-  background-size: contain;
-  background-position: center;
-  margin: 10px 0;
-}
+  .content #img1 {
+    width: 100%;
+    height: 700px;
+    background: url("../images/blog/choice/shop0.jpg") no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin: 10px 0;
+  }
 
-.content #img2 {
-  width: 100%;
-  height: 600px;
-  background: url("../images/blog/choice/shop.jpg") no-repeat;
-  background-size: contain;
-  background-position: center;
-  margin: 10px 0;
-}
+  .content #img2 {
+    width: 100%;
+    height: 600px;
+    background: url("../images/blog/choice/shop.jpg") no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin: 10px 0;
+  }
 
-img {
-  margin: 20px 0;
-}
+  img {
+    margin: 20px 0;
+  }
 
-.pager {
-  width: 100%;
-  height: 200px;
-  margin-bottom: 200px;
-  display: grid;
-  grid-template-rows: 200px;
-  grid-template-columns: 50% 50%;
-}
+  .pager {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 200px;
+    display: grid;
+    grid-template-rows: 200px;
+    grid-template-columns: 50% 50%;
+  }
 
-.pager a {
-  padding: 30px;
-  box-sizing: border-box;
-  background-color: #262626;
-  font-size: 20px;
-  font-weight: 300;
-  transition: 0.2s ease-in-out;
-  color: rgba(255, 255, 255, 0.726);
-  cursor: pointer;
-}
+  .pager a {
+    padding: 30px;
+    box-sizing: border-box;
+    background-color: #262626;
+    font-size: 20px;
+    font-weight: 300;
+    transition: 0.2s ease-in-out;
+    color: rgba(255, 255, 255, 0.726);
+    cursor: pointer;
+  }
 
-/* .pager a:first-of-type:hover{
+  /* .pager a:first-of-type:hover{
       background-image: url("../images/douban.jpg");
       transition: .2s ease-in-out;
   } */
 
-.pager a span {
-  margin-top: 20px;
-  font-size: 35px;
-  display: block;
-  font-weight: 500;
-  color: white;
-  line-height: 1.2;
-  padding-bottom: 10px;
+  .pager a span {
+    margin-top: 20px;
+    font-size: 35px;
+    display: block;
+    font-weight: 500;
+    color: white;
+    line-height: 1.2;
+    padding-bottom: 10px;
+  }
+
+  .pager a:hover {
+    font-size: 20px;
+    font-weight: 300;
+    background-color: #373737;
+    color: white;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+  }
+
+  .pager:first-child {
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
+
+  .pager:last-child {
+    grid-area: 1 / 2 / span 1 / span 1;
+  }
 }
 
-.pager a:hover {
-  font-size: 20px;
-  font-weight: 300;
-  background-color: #373737;
-  color: white;
-  transition: 0.2s ease-in-out;
-  cursor: pointer;
-}
+@media only screen and (max-width: 520px) {
+  .bbg {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3l9oZB/jASqEt644m*KNERKGtvN1auyrsMuS63lAOjMrSEHlBq4X0L5Pxuk5XEoijxDffbO9N46C1SPxnqiVmVPZph.7gnQVT4jALCBYWTQHGB10PE!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -20px;
+    background-position-x: center;
+    background-size: 110%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.pager:first-child {
-  grid-area: 1 / 1 / span 1 / span 1;
-}
+  .bbg2 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2sSSoy/jASqEt644m*KNERKGtvN1TyYp4nih0izSPa4Er1eZF3cQSi0gE0HI9DJMoRdVOVl2IO.tbQY6wOKoo2s.1ANVleseu3tuJu7rfuv*MY9FqM!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: 0px;
+    background-position-x: center;
+    background-size: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-.pager:last-child {
-  grid-area: 1 / 2 / span 1 / span 1;
+  .bbg3 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1YkBH4Tta1fGwBZwdOCP5gigI3.cibYjjrWumQu0wg1aI8EjKi5g4mGoWtR9F7hOHAjKKqqT5oF9Q6p*icDDcjg!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: 0;
+    background-position-x: center;
+    background-size: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .bbg4 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    /* background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1bxGmlRDxCg7uJn8CqxiiefNFANJADPvm4cBalldC*52rh6a1sspgDkEaX9rku4kcv072*m7avMdxFUTLEEHw9k!/r"); */
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1YjLHbuE*UtOxvbfzQ6ngo7uFcfpdfawpSZ1azgKTw.XGVrUT5TX.kj0qUJDBxxdjtfyr3rHoaUrZStYlxkIOtU!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: 0px;
+    background-position-x: -245px;
+    background-size: 75%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .bbg5 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1UVATWV5G.8EYzzQYhvjlPjBhXbMDtQCbFEntn35cPNKscEuax6RbGP3fVF1FS5MmD1ZY0g7Y3a9AJ1FMrEKgSI!/r");
+    /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -20px;
+    background-position-x: center;
+    background-size: 110%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .bbg6 {
+    width: 100%;
+    height: 500px;
+    /* background-color: teal; */
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1X.9lWJFcVbcomBVSNQP*6C11J5SEyxx3VWBA6gOL5sw9xt4If9U99cTQ6OZn3Fw8w61haIDZTjhnkt*.rGjSto!/r");
+    /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -20px;
+    background-position-x: center;
+    background-size: 110%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .content .title {
+    color: white;
+    width: 100%;
+    height: 150px;
+    line-height: 1.2;
+    font-size: 30px;
+    font-weight: 700;
+    margin: 12px auto;
+    margin-bottom: 25px;
+    padding: 0 20px;
+  }
+
+  .title span {
+    margin: 20px 0;
+    display: block;
+    font-size: 15px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.753);
+  }
+
+  .content {
+    width: 200%;
+
+    line-height: 1.7;
+    font-size: 24px;
+    font-weight: 500;
+    color: rgb(221, 221, 221);
+    margin: 200px auto;
+    margin-bottom: 150px;
+    /* background-color: rgba(50, 50, 50, 0.658); */
+  }
+
+  .content #img1 {
+    width: 100%;
+    height: 700px;
+    background: url("../images/blog/choice/shop0.jpg") no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin: 10px 0;
+  }
+
+  .content #img2 {
+    width: 100%;
+    height: 600px;
+    background: url("../images/blog/choice/shop.jpg") no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin: 10px 0;
+  }
+
+  img {
+    margin: 20px 0;
+  }
+
+  .pager {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 200px;
+    display: grid;
+    grid-template-rows: 200px;
+    grid-template-columns: 50% 50%;
+  }
+
+  .pager a {
+    padding: 30px;
+    box-sizing: border-box;
+    background-color: #262626;
+    font-size: 20px;
+    font-weight: 300;
+    transition: 0.2s ease-in-out;
+    color: rgba(255, 255, 255, 0.726);
+    cursor: pointer;
+  }
+
+  /* .pager a:first-of-type:hover{
+      background-image: url("../images/douban.jpg");
+      transition: .2s ease-in-out;
+  } */
+
+  .pager a span {
+    margin-top: 20px;
+    font-size: 35px;
+    display: block;
+    font-weight: 500;
+    color: white;
+    line-height: 1.2;
+    padding-bottom: 10px;
+  }
+
+  .pager a:hover {
+    font-size: 20px;
+    font-weight: 300;
+    background-color: #373737;
+    color: white;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+  }
+
+  .pager:first-child {
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
+
+  .pager:last-child {
+    grid-area: 1 / 2 / span 1 / span 1;
+  }
 }
